@@ -1,7 +1,10 @@
 1998-12-01  Andrew T. Veliath  <andrewtv@usa.net>
 
-	* parser.y: Allow boolean XPIDL properties, which are inserted
-	with an empty string.
+	* parser.y, lexer.l, util.c, IDL.h: Allow boolean XPIDL
+	properties, which are inserted with an empty string.  Add
+	recognition of "noscript" keyword when XPIDL syntax is enabled.
+	Add syntactical recognition for "native mytype (PRThread *)" in
+	XPIDL mode (i.e., where `PRThread *' can be anything).
 
 1998-11-30  Andrew T. Veliath  <andrewtv@usa.net>
 
